--- a/frontend/src/@core/scss/base/_vertical-nav.scss
+++ b/frontend/src/@core/scss/base/_vertical-nav.scss
@@ -132,6 +132,8 @@
 
       > .router-link-exact-active {
         @extend %nav-link-active;
+        background: var(--light-opacity-color-extra-menu-hover, rgba(75, 70, 92, 0.04)) !important;
+        box-shadow: none !important;
       }
 
       > a {
