--- a/frontend/src/@core/scss/template/libs/vuetify/_variables.scss
+++ b/frontend/src/@core/scss/template/libs/vuetify/_variables.scss
@@ -1,7 +1,7 @@
 @use "sass:math";
 
-$font-family-custom: "Public Sans",sans-serif,-apple-system,blinkmacsystemfont,
-  "Segoe UI",roboto,"Helvetica Neue",arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+$font-family-custom: "Helvetica Neue",sans-serif,-apple-system,blinkmacsystemfont,
+  "Segoe UI",roboto,"Public Sans",arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 
 // 👉 Typography custom variables
 $typography-h5-font-size: 1.125rem;
